[package]
name = "ipsuite"
version = "0.0.1"
edition = "2024"

description = "[WIP] Collection of Types for the Internet Protocol Suite"
categories = ["data-structures", "network-programming", "no-std", "no-std::no-alloc"]
keywords = []

authors = ["Folke <folke@gmail.com>"]
license = "Apache-2.0 OR BSD-2-Clause OR MIT"
repository = "https://github.com/cloneable/ipsuite"

[features]
default = []
std = []

[dependencies]
zerocopy = { version = "0.8.24", default-features = false, features = ["derive"] }
